Change name of app in app.json

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Blank Template (TypeScript)",
+    "name": "Approx",
     "slug": "approx",
     "privacy": "public",
     "sdkVersion": "36.0.0",
